# proyecto-inventario-de-autos

./: .gitignore  CMakeLists.txt  README.md
database/: inventario_de_autos_templates.db
docs/: LICENSE
include/: databasemanager.h  datatablewidget.h  imprimirdialog.h  imprimirscreen.h  infodialog.h  mainwindow.h  newregistrationwidget.h  registlescreen.h  welcomescreen.h  welcomewidget.h
resources/: resources.qrc
resources/SQL/: inicializacion_inventario_de_autos.sql
resources/sql/: inicializacion_inventario_de_autos.sql
src/: CMakeLists.txt  databasemanager.cpp  datatablewidget.cpp  imprimirdialog.cpp  imprimirscreen.cpp  infodialog.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  newregistrationwidget.cpp  registlescreen.cpp  welcomescreen.cpp  welcomewidget.cpp
ui/: datatablewidget.ui  imprimirdialog.ui  imprimirscreen.ui  infodialog.ui  mainwindow.ui  newregistrationwidget.ui  registlescreen.ui  welcomescreen.ui  welcomewidget.ui
